--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_dra.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_dra.xhtml
@@ -66,6 +66,7 @@
                     <p:outputLabel value="ZUS 53 FP" style="width: 80px;"/>
                     <p:outputLabel value="ZUS 53 FGŚP" style="width: 80px;"/>
                     <p:outputLabel value="Niemcy" style="width: 80px;"/>
+                    <p:outputLabel value=" "/>
                     <bcf:outputpl value="#{draNView.zus51pracownik}"/>
                     <bcf:outputpl value="#{draNView.zus51pracodawca}"/>
                     <bcf:outputpl value="#{draNView.zusFP}"/>
