p[it 4 moze oddelegowanie

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -223,7 +223,7 @@
                             <h:outputText value="do wypł."/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="w EUR"/>
+                            <h:outputText value="NOWY"/>
                         </p:column>
                         <p:column width="20">
                             <h:outputText value="kurs"/>
@@ -290,7 +290,7 @@
                             <bcf:outputpl value="#{itempasek.netto}"  style="color: #009688;"/>
                         </p:column>
                         <p:column style="text-align: right;">
-                            <bcf:outputpl value="#{itempasek.nettowaluta}" />
+                            <bcf:outputpl value="#{itempasek.przekroczenienowypodatek}" />
                         </p:column>
                         <p:column width="20" style="text-align: center;">
                             <h:outputText value="#{indexpasek+1}"/>
