--- a/kadry/src/main/webapp/kalendarz/index.xhtml
+++ b/kadry/src/main/webapp/kalendarz/index.xhtml
@@ -47,6 +47,9 @@
                     <p:tab title="wypadkowe">
                         <ui:include src="sub/firma_wypadkowe.xhtml"/>
                     </p:tab>
+                    <p:tab title="budowy">
+                        <ui:include src="sub/firma_baustellen.xhtml"/>
+                    </p:tab>
                     <p:tab title="globalny" rendered="#{wpisView.uzer.login eq '2'}">
                         <ui:include src="sub/kalendarz_globalny.xhtml"/>
                     </p:tab>
