--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -247,7 +247,8 @@
                             <bcf:outputpl value="#{itempasek.fgsp}"/>
                         </p:column>
                         <p:column width="20" style="text-align: center;">
-                            <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false" update="@form NieobecnoscListForm DefinicjalistaplacCreateForm2 RachunekZleceniaForm  @(.dataUmowy)"/>
+                            <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false" rendered="#{pasekwynagrodzenView.pozwalamusunacpasek}"
+                                             update="@form NieobecnoscListForm DefinicjalistaplacCreateForm2 RachunekZleceniaForm  @(.dataUmowy)"/>
                         </p:column>
                     </p:row>
                 </p:panelGrid>
