--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -295,7 +295,7 @@
                         <p:column width="20" style="text-align: center;">
                             <h:outputText value="#{indexpasek+1}"/>
                             <h:outputText value="student" rendered="#{itempasek.kalendarzmiesiac.angaz.student}" style="color: #009688;"/>
-                            <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false" 
+                            <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false"  rendered="#{pasekwynagrodzenView.pozwalamusunacpasek}"
                                              update="NieobecnoscListForm DefinicjalistaplacCreateForm2 PasekwynagrodzenListForm:datalist RachunekZleceniaForm @(.dataUmowy)"/>
                         </p:column>
                     </p:row>
