--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_prosta.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_prosta.xhtml
@@ -163,7 +163,8 @@
                             <bcf:outputpl value="#{itempasek.netto}"/>
                         </p:column>
                         <p:column width="20" style="text-align: center;">
-                            <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false" update="@form NieobecnoscListForm DefinicjalistaplacCreateForm2"/>
+                            <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}"  rendered="#{pasekwynagrodzenView.pozwalamusunacpasek}"
+                                             global="false" update="@form NieobecnoscListForm DefinicjalistaplacCreateForm2"/>
                         </p:column>
                     </p:row>
                 </p:panelGrid>
