drobne naprawy domowe

--- a/npkpir_23/web/wspolny/sub/ewidencjaprzychodow.xhtml
+++ b/npkpir_23/web/wspolny/sub/ewidencjaprzychodow.xhtml
@@ -62,7 +62,7 @@
                     <p:row>  
                         <p:column headerText="imię i nazwisko (firma)"  />  
                         <p:column headerText="adres"   />  
-<!--                        <p:column headerText="20%"   />  -->
+<!--                        <p:column headerText="20%"   /> 
                         <p:column headerText="17%"/>  
                         <p:column headerText="15%"/>  
                         <p:column headerText="14%"/>  
