--- a/npkpir_23/web/ksiegowa/sub/podatnikust/aktywnedokumentyksiegowe.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/podatnikust/aktywnedokumentyksiegowe.xhtml
@@ -181,7 +181,7 @@
                 </p:panelGrid>
             
             <p:panelGrid columns="3" style="column-width: 350px; width: 300px; padding: 10px;">
-                <p:commandButton actionListener="#{podatnikView.dodajDokKsi()}" global="false" value="dodaj dokument" update=":akordeon:form6:pDokKsi :akordeon:form7" style="width: 120px;"/>
+                <p:commandButton actionListener="#{podatnikView.dodajDokKsi()}" global="false" value="dodaj dokument" update=":akordeon:form6:pDokKsi :akordeon:form7" style="width: 120px;" rendered="false"/>
                 <p:commandButton actionListener="#{podatnikView.editdok()}" global="false" value="edytuj dokument" update=":akordeon:form6:pDokKsi :akordeon:form7" style="width: 120px;margin-left: 20px;"/>
                 <p:commandButton actionListener="#{podatnikView.pobierzrokpoprzedni}" global="true" value="pobierz rok pop." update=":akordeon:form6:pDokKsi :akordeon:form7"  style="width: 120px;margin-left: 20px;"/>
             </p:panelGrid>
