--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza_zbiorcze.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza_zbiorcze.xhtml
@@ -151,10 +151,15 @@
                     <p:commandButton icon="fa fa-magic" actionListener="#{fakturaRozrachunkiAnalizaView.korygujsaldo(item)}" 
                                      update="@form" />
                 </p:column>
-                <p:column width="40" style="text-align: center;" headerText="bo">
+<!--                <p:column width="40" style="text-align: center;" headerText="bo">
+                    <p:commandButton icon="fa fa-plus" actionListener="#{fakturaRozrachunkiAnalizaView.zaksiegujjakoBO(item)}" 
+                                     update="@form"/>
+                </p:column>-->
+                 <p:column width="40" style="text-align: center;" headerText="bo">
                     <p:commandButton icon="fa fa-plus" actionListener="#{fakturaRozrachunkiAnalizaView.zaksiegujjakoBO(item)}" 
                                      update="@form"/>
                 </p:column>
+                
 
             </p:dataTable>
                  <p:contextMenu for="akordeon:fakturaanalizazbiorcza:tablicaanaliza" style="width: 250px;">
