--- a/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
@@ -120,7 +120,8 @@
                 </p:panelGrid>
                 <p:panelGrid columns="2">
                         <p:outputLabel value="inne warunki zatr." />
-                        <p:textEditor id="dodatkowepraca" value="#{umowaView.selected.innewarunkizatrudnienia}"  styleClass="dataUmowy" secure="false" height="90" allowFormatting="false" toolbarVisible="false" style="width: 1100px;">
+                        <p:textEditor id="dodatkowepraca" value="#{umowaView.selected.innewarunkizatrudnienia}"  styleClass="dataUmowy" secure="false"
+                                      height="90" allowFormatting="false" toolbarVisible="false" style="width: 1300px;">
                            
                         </p:textEditor>
                     </p:panelGrid>
@@ -244,7 +245,8 @@
                 </p:panelGrid>
                  <p:panelGrid columns="2">
                         <p:outputLabel value="inne warunki zatr." />
-                        <p:textEditor id="dodatkowe" value="#{umowaView.selected.innewarunkizatrudnienia}"  styleClass="dataUmowy" secure="false" height="80" allowFormatting="false" toolbarVisible="false" style="width: 900px;">
+                        <p:textEditor id="dodatkowe" value="#{umowaView.selected.innewarunkizatrudnienia}"  styleClass="dataUmowy" secure="false" 
+                                      height="90" allowFormatting="false" toolbarVisible="false" style="width: 1300px;">
                            
                         </p:textEditor>
                     </p:panelGrid>
